# inflection

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
docs/: api_reference.md  index.md
examples/: basic_usage.py  big_data_example.py  fisher_pry_sigmoid.py  gompertz_curve.py  polynomial_curves.py
inflection/: __init__.py  core.py
tests/: __init__.py  test_vignettes.py
